deploy/templates/envoy-template.yml
# This template creates the configmap that contains the configuration of the
# Envoy proxy that is in front of the service. Note that this is only used in
# development environments. In the integration, stage and production
# environmens this configmap is defined in app-interface.

---
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: migration-planner-envoy
parameters:

objects:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: migration-planner-envoy
  data:
    envoy.yaml: |
      # The administration endpoint uses a Unix socket instead of TCP in order
      # to avoid exposing it outside of the pod. Requests for metrics and
      # probes will go via an HTTP listener that only accepts requests for the
      # /metrics and /ready paths.
      admin:
        access_log_path: /dev/null
        address:
          pipe:
            path: /sockets/admin.socket

      static_resources:
  
        clusters:

        # This backend is used to send metrics and probes requests to the
        # administration endpoint.
        - name: admin
          connect_timeout: 1s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: admin
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    pipe:
                      path: /sockets/admin.socket
  
        # This cluster is used to send requests to the backend-api.
        - name: backend-api
          connect_timeout: 1s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: backend-api
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 13443
        
        # This cluster is used to send requests to the backend-agent-api.
        - name: backend-agent-api
          connect_timeout: 1s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: backend-agent-api
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 17443
        
        # This cluster is used to send requests to the backend-image.
        - name: backend-image
          connect_timeout: 1s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: backend-image
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 21443
  
        listeners:
  
        # This listener is used to accept /metrics and /ready requests.
        # Everything else will be rejected.
        - name: admin
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 9000
          filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: admin
                route_config:
                  name: admin
                  virtual_hosts:
                  - name: admin
                    domains:
                    - "*"
                    routes:
                    - name: ready
                      match:
                        path: /ready
                      route:
                        cluster: admin
                    - name: metrics
                      match:
                        path: /metrics
                      route:
                        cluster: admin
                        prefix_rewrite: /stats/prometheus
                http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

        # This listener is used to accept inbound API requests for backend-api.
        - name: ingress-backend-api
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 3443
              protocol: TCP
          filter_chains:
            - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  use_remote_address: true # enable x-forward-for
                  skip_xff_append: false
                  xff_num_trusted_hops: 1
                  stat_prefix: backend-api
                  access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                  route_config:
                    name: http_route
                    virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes:
                        - match: 
                            prefix: /api/v1/sources
                          route:
                            cluster: backend-api
                        - match: 
                            prefix: /health
                          route:
                            cluster: backend-api
                  http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        # This listener is used to accept inbound API requests for backend-agent-api.
        - name: ingress-backend-agent-api
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 7443
              protocol: TCP
          filter_chains:
            - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  use_remote_address: true # enable x-forward-for
                  skip_xff_append: false
                  xff_num_trusted_hops: 1
                  stat_prefix: backend-agent-api
                  access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                  route_config:
                    name: http_route
                    virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes:
                      - match: 
                          prefix: /api/v1/agents
                        route:
                          cluster: backend-agent-api
                      - match: 
                          prefix: /api/v1/sources
                        route:
                          cluster: backend-agent-api
                  http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

        # This listener is used to accept inbound API requests for backend-image.
        - name: ingress-backend-image
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 11443
              protocol: TCP
          filter_chains:
            - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  use_remote_address: true # enable x-forward-for
                  skip_xff_append: false
                  xff_num_trusted_hops: 1
                  stat_prefix: backend-image
                  access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                  route_config:
                    name: http_route
                    virtual_hosts:
                    - name: default
                      domains: 
                        - "*"
                      routes:
                      - match: 
                          prefix: /api/v1/image
                        route:
                          cluster: backend-image
                      - match: 
                          prefix: /health
                        route:
                          cluster: backend-image
                  http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
